# infrastructure

./: .env  .gitignore  3tier-fabric.excalidraw  MANIFEST.in  Makefile  README.md  process.excalidraw  pyproject.toml  requirements.txt  setup.py  update_et_def_package_name.py
.github/workflows/: build.yaml
keysight_chakra/: __init__.py  validation.py
keysight_chakra/infra/: annotate.proto  annotate_pb2.py  annotate_pb2.pyi  annotate_pb2_grpc.py  infra.proto  infra_pb2.py  infra_pb2.pyi  infra_pb2_grpc.py  service.proto  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
keysight_chakra/mlcommons/: et_def.proto  et_def_pb2.py  et_def_pb2_grpc.py
keysight_chakra/protobuf/: annotate.proto  et_def.proto  infra.proto  service.proto
keysight_chakra/protos/: annotate.proto  service.proto
keysight_chakra/tests/: conftest.py  test_serialization.py  test_validation.py
protos/: bind.proto  infra.proto  service.proto
resources/infra_examples/1tier-4host/: infra.json
resources/infra_examples/1tier-8host/: infra.json
resources/infra_examples/3tier-256host/: infra.json
resources/infra_examples/CLOS/1tier-4host/: infra.json  infra.yaml
src/: builders.py  closfabric.py  generic.py  infra_service.py  infrastructure.py  rack_plane_fabric.py  rack_plane_host.py  service.py  utilities.py  validation.py  zionex.py
src/notes/: infra.yaml  infrastructure.ipynb
src/tests/: .test_device.py.swp  conftest.py  test_device.py  test_rack_plane.py  test_service.py  test_validation.py
tests/: conftest.py  test_serialization.py  test_validation.py
(+2 files in other folders)
